# paper-implementations

./: .gitignore  CLAUDE.md  README.md
.agents/rules/: global-rules.md
.claude/: settings.json
.claude/rules/: git-workflow.md
.claude/rules/skills/doc-code-consistency/: SKILL.md
.claude/rules/skills/formula-code-mapping/: SKILL.md
.github/workflows/: test.yml
01-rbf-gen/: README.md
01-rbf-gen/example/: example_1D.py
01-rbf-gen/src/rbf_gen/: model.py  null_space.py
01-rbf-gen/tests/: test_null_space.py
02-mpde-bo/: pyproject.toml
02-mpde-bo/.claude/: settings.json
02-mpde-bo/doc/: test_cases.md
02-mpde-bo/examples/: run_mpde_bo.py
02-mpde-bo/src/mpde_bo/: acquisition_optimizer.py  evaluator.py  gp_model_manager.py  importance_analyzer.py
02-mpde-bo/tests/: test_benchmark_function.py  test_importance_analyzer.py  test_parameter_classifier.py
03-PINNs-Burgers/: .env.example  CLAUDE.md  README.md  pyproject.toml
03-PINNs-Burgers/.claude/: settings.json
03-PINNs-Burgers/doc/: bo_design.md  full_paper.md  hybrid_design.md  hybrid_test_design.md  imp_design.md  llm_opt_design.md  llm_test_design.md  paper_method.md  refactor_optimizer_design.md  test_bo_design.md  test_design.md
03-PINNs-Burgers/example/: bo_forward.py  forward_problem.py  hybrid_forward.py  inverse_problem.py  opt_agent_forward.py
03-PINNs-Burgers/example/bo_output/: bo_report.md
03-PINNs-Burgers/example/hybrid_output/: hybrid_llm_report.md  hybrid_trials.csv
03-PINNs-Burgers/example/opt_agent_output/: opt_agent_report.md
03-PINNs-Burgers/src/03_PINNs_Burgers/: config.py  data.py  residual.py  solver.py
03-PINNs-Burgers/src/PINNs_Burgers/: __init__.py  api.py  loss.py  network.py  results.py  solver.py
03-PINNs-Burgers/src/bo/: __init__.py  objective.py  optimizer.py  report.py  result.py  space.py
03-PINNs-Burgers/src/hybrid/: __init__.py  optimizer.py  plot.py  result.py
03-PINNs-Burgers/src/opt_agent/: __init__.py  chain.py  config.py  optimizer.py  prompt.py  proposal.py  report.py
03-PINNs-Burgers/src/opt_tool/: __init__.py  base.py  objective.py  report_utils.py  result.py  space.py
03-PINNs-Burgers/src/opt_viz/: __init__.py  pinn_heatmap.py  plots.py
03-PINNs-Burgers/tests/: check_behavior.py  check_bo_behavior.py  check_hybrid_behavior.py  check_llm_behavior.py  test_algorithm.py  test_bo_algorithm.py  test_bo_theory.py  test_hybrid_algorithm.py  test_llm_algorithm.py  test_llm_theory.py  test_theory.py
99-operation-test/: pyproject.toml
99-operation-test/doc/: newton_method.md  test_spec.md
99-operation-test/example/: newton_method_example.py
99-operation-test/src/: newton_method.py
99-operation-test/tests/: test_main.py  test_newton_method.py
mpde-bo/: README.md  pyproject.toml
mpde-bo/doc/: api_design.md  class_design.md  method.md  test_cases.md
mpde-bo/src/mpde_bo/: acquisition_optimizer.py  benchmark.py  evaluator.py  gp_model_manager.py  importance_analyzer.py  optimizer.py  parameter_classifier.py
mpde-bo/tests/: conftest.py  test_acquisition_optimizer.py  test_gp_model_manager.py  test_mpde_bo_optimizer.py  test_n90_evaluator.py  test_parameter_classifier.py
operation-test/: main.py  pyproject.toml
papers/operation-test/: main.py
rbf-gen/: CLAUDE.md  pyproject.toml
rbf-gen/.claude/: settings.json
rbf-gen/doc/: class_diagram.md  method.md  test_spec.md
rbf-gen/src/rbf_gen/: generator.py  kernels.py  losses.py  model.py  null_space.py  rbf.py  trainer.py
rbf-gen/tests/: test_generator.py  test_kernels.py  test_losses.py  test_model.py  test_rbf.py  test_trainer.py
scripts/: new-project.sh
(+4 files in other folders)
