[project]
name = "03-PINNs-Burgers"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "botorch>=0.17.2",
    "gpytorch>=1.15.2",
    "langchain-core>=1.2.19",
    "langchain-google-genai>=4.2.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/PINNs_Burgers", "src/bo", "src/hybrid", "src/opt_agent", "src/opt_tool", "src/opt_viz"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "algorithm: アルゴリズム実装の正確性テスト（計算の正しさ）",
    "theory: 論文の理論的性質が成立するかのテスト（数学的保証）",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
]
